Made correction to random_module

--- a/random_module.ipynb
+++ b/random_module.ipynb
@@ -119,40 +119,36 @@
    },
    "outputs": [
     {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "[&#39;three&#39;, &#39;ace&#39;, &#39;four&#39;, &#39;two&#39;]"
-     },
-     "metadata": {},
-     "execution_count": 5
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "[&#39;three&#39;, &#39;ace&#39;, &#39;four&#39;, &#39;two&#39;]\n"
     }
    ],
    "source": [
     "deck = 'ace two three four'.split()\n",
     "# Shuffle the sequence in place\n",
     "random.shuffle(deck)\n",
-    "deck"
+    "print(deck)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "[30, 20, 10, 50]"
-     },
-     "metadata": {},
-     "execution_count": 6
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "[30, 20, 10, 50]\n"
     }
    ],
    "source": [
     "# Return a k length list of unique elements chosen from the population sequence or set.\n",
     "# Used for random sampling without replacement.\n",
     "# Four samples without replacement\n",
-    "random.sample([10, 20, 30, 40, 50], k=4)"
+    "print(random.sample([10, 20, 30, 40, 50], k=4))"
    ]
   },
   {
@@ -177,15 +173,14 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "[&#39;green&#39;, &#39;red&#39;, &#39;green&#39;, &#39;black&#39;, &#39;black&#39;, &#39;black&#39;]"
-     },
-     "metadata": {},
-     "execution_count": 8
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "[&#39;green&#39;, &#39;red&#39;, &#39;green&#39;, &#39;black&#39;, &#39;black&#39;, &#39;black&#39;]\n"
     }
    ],
    "source": [
@@ -193,7 +188,7 @@
     "# Wheel consisting of 38 total strips, 18 red, 18 black and 2 green\n",
     "# And a ball is rotated on the wheel\n",
     "# Probability that the ball lands on red strip = 18/38\n",
-    "random.choices(['red', 'black', 'green'], weights=[18, 18, 2], k=6)"
+    "print(random.choices(['red', 'black', 'green'], weights=[18, 18, 2], k=6))"
    ]
   },
   {
