Made correction to csv module

--- a/csv_module.ipynb
+++ b/csv_module.ipynb
@@ -38,17 +38,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "&lt;_csv.reader object at 0x058EE958&gt;\n[&#39;Neil&#39;, &#39;velit@Maurisquis.net&#39;, &#39;Bouvet Island&#39;]\n[&#39;Holly&#39;, &#39;aliquet.vel@eu.co.uk&#39;, &#39;Haiti&#39;]\n[&#39;Kevyn&#39;, &#39;eu@Etiamvestibulummassa.org&#39;, &#39;Kuwait&#39;]\n[&#39;Galena&#39;, &#39;est.Nunc@volutpatNulla.com&#39;, &#39;Swaziland&#39;]\n[&#39;Craig&#39;, &#39;et.magnis@augue.ca&#39;, &#39;Sri Lanka&#39;]\n[&#39;Stewart&#39;, &#39;In@inceptoshymenaeos.edu&#39;, &#39;Yemen&#39;]\n[&#39;Cooper&#39;, &#39;cubilia.Curae.Donec@dolor.net&#39;, &#39;Iran&#39;]\n[&#39;Keaton&#39;, &#39;mollis@odio.co.uk&#39;, &#39;Honduras&#39;]\n[&#39;Grace&#39;, &#39;ac.mattis@metusVivamuseuismod.org&#39;, &#39;Nicaragua&#39;]\n[&#39;Venus&#39;, &#39;Proin.vel@euaccumsansed.edu&#39;, &#39;Bhutan&#39;]\n[&#39;Kermit&#39;, &#39;imperdiet@liberoet.org&#39;, &#39;Wallis and Futuna&#39;]\n[&#39;Tanisha&#39;, &#39;a.ultricies.adipiscing@hendrerit.ca&#39;, &#39;Malawi&#39;]\n[&#39;Beau&#39;, &#39;Aenean.eget@elit.edu&#39;, &#39;Jersey&#39;]\n[&#39;Amela&#39;, &#39;diam.luctus.lobortis@lobortismauris.edu&#39;, &#39;Angola&#39;]\n[&#39;Desirae&#39;, &#39;Nunc.ac.sem@sociisnatoque.ca&#39;, &#39;Iceland&#39;]\n[&#39;Audra&#39;, &#39;pharetra.nibh.Aliquam@liberoProinsed.com&#39;, &#39;Reunion&#39;]\n[&#39;Martina&#39;, &#39;orci@Aenean.edu&#39;, &#39;Libya&#39;]\n[&#39;Laith&#39;, &#39;vitae.aliquam.eros@maurisMorbi.org&#39;, &#39;Zambia&#39;]\n[&#39;Ruby&#39;, &#39;arcu@consectetueradipiscing.com&#39;, &#39;Macedonia&#39;]\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import csv\n",
     "\n",
@@ -64,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,11 +72,71 @@
    ]
   },
   {
+   "source": [
+    "- `DictReader()` creates an object that operates like a regular csv reader but maps the information in each row to a dict.\n",
+    "- The keys of the dict are given by the optional `fieldnames` parameter.\n",
+    "- The `fieldnames` parameter is a sequence.\n",
+    "- If `fieldnames` is omitted, the values in the first row of csv file will be used as the fieldnames."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "with open('d:/python_basics/csv-examples/person.csv') as csv_file:\n",
+    "    csv_reader = csv.DictReader(csv_file, delimiter=',')\n",
+    "    for line in csv_reader:\n",
+    "        print(line)\n",
+    "        # print(f\"{line['name']} is from {line['country']}\")"
+   ]
+  },
+  {
+   "source": [
+    "- `DictWriter` creates an object which operates like a regular csv writer.\n",
+    "- But, istead of list, it maps dictionaries onto output rows.\n",
+    "- Unlike the `DictReader` class, the `fieldnames` parameter of the `DictWriter` class is not optional.\n",
+    "- The `fieldnames` parameter is a sequence of keys that identify the order in which values in the dictionary passed to the `writerow()` method are written to csv file.\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "with open('d:/python_basics/csv-examples/person.csv') as csv_reader_file:\n",
+    "    csv_reader = csv.DictReader(csv_reader_file, delimiter=',')\n",
+    "    with open('d:/python_basics/csv-examples/new_person.csv', 'w', newline='') as csv_writer_file:\n",
+    "        csv_writer = csv.DictWriter(csv_writer_file, fieldnames=['country','name'], delimiter='\\t')\n",
+    "        csv_writer.writeheader()\n",
+    "        for line in csv_reader:\n",
+    "            del line['email']\n",
+    "            csv_writer.writerow(line)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('d:/python_basics/csv-examples/person.csv') as csv_reader_file:\n",
+    "    csv_reader = csv.DictReader(csv_reader_file, delimiter=',')\n",
+    "    with open('d:/python_basics/csv-examples/new_person1.csv', 'w', newline='') as csv_writer_file:\n",
+    "        csv_writer = csv.DictWriter(csv_writer_file, fieldnames=['country','name'], delimiter='\\t', extrasaction='ignore')\n",
+    "        csv_writer.writeheader()\n",
+    "        for line in csv_reader:\n",
+    "            # del line['email']\n",
+    "            csv_writer.writerow(line)"
+   ]
   }
  ]
 }
