Made correction to random module

--- a/random_module.ipynb
+++ b/random_module.ipynb
@@ -103,7 +103,7 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "[&#39;draw&#39;, &#39;lose&#39;, &#39;win&#39;, &#39;lose&#39;, &#39;win&#39;]\n"
+     "text": "['draw', 'lose', 'win', 'lose', 'win']\n"
     }
    ],
    "source": [
@@ -121,7 +121,7 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "[&#39;three&#39;, &#39;ace&#39;, &#39;four&#39;, &#39;two&#39;]\n"
+     "text": "['three', 'ace', 'four', 'two']\n"
     }
    ],
    "source": [
@@ -180,7 +180,7 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "[&#39;green&#39;, &#39;red&#39;, &#39;green&#39;, &#39;black&#39;, &#39;black&#39;, &#39;black&#39;]\n"
+     "text": "['green', 'red', 'green', 'black', 'black', 'black']\n"
     }
    ],
    "source": [
@@ -216,7 +216,7 @@
     "# prob = total / 100000\n",
     "# print(prob)\n",
     "\n",
-    "print(sum([trial() for i in range(10000)])/10000)\n"
+    "print(sum([trial() for i in range(10000)])/10000)"
    ]
   }
  ]
